welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: type color
	def faireC(c:color) {
                     ^PatternPicture:4: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	       setCouleurBrosse()
                               ^PatternPicture:28: error: not found: value faireMotif1
	faireMotif1()
        ^